# autoresearch

./: .dockerignore  .env.example  .env.secrets.example  .gitignore  Dockerfile  Dockerfile.base  README.md  RUNPOD.md  collab.md  compose.yaml  coordinator.py  dashboard_app.py  prepare.py  program.md  pyproject.toml  setup_hub.py  swarm_auth.py  swarm_config.py  train.py
.github/workflows/: publish-image.yml
config/: swarm.yaml
dashboard/static/: dashboard.css
dashboard/templates/: index.html
runpod/: pod-template.json
scripts/: run_agent.py  runpod_entrypoint.sh  runpod_supervisor.py  swarm
